BuildHughes/translation-tool/inputs/source_meta/objects/HNS_Products__c.object
<CustomObject>
    <description>Custom Product Object for Hughes.</description>
    <fields>
        <fullName>Adapter_Mode__c</fullName>
        <description>Adapter Model</description>
        <label>Adapter Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <label>Association</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hosted By</fullName>
                </value>
                <value>
                    <fullName>Managed By</fullName>
                </value>
                <value>
                    <fullName>Connected To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <description>Billing Category is Similar to Product Grouping but needed by Billing</description>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wireline</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>Active Bonding</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Satellite</fullName>
                </value>
                <value>
                    <fullName>WiFi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Service_Category__c</fullName>
        <description>Billing Service Category is Similar to Product Grouping but needed by Billing</description>
        <label>Billing Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wireline</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>Active Bonding</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Satellite</fullName>
                </value>
                <value>
                    <fullName>WiFi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <description>Indicates launch of a product for 1 or more business segments</description>
        <inlineHelpText>Indicates launch of a product for 1 or more business segments</inlineHelpText>
        <label>Business Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>SMEBI</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_ID_Suffix__c</fullName>
        <description>Device ID Suffix</description>
        <inlineHelpText>In case Device ID is needed, then Suffix for the Device ID. E.g. Modem with M, Router ending with R, Service ending with S

Device ID suffix to be kept same for VSAT hardware and service products.</inlineHelpText>
        <label>Device ID Suffix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Life_for_Install__c</fullName>
        <description>Indicates End of Life of a given product for Installation purposes</description>
        <label>End of Life for Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Life_for_Sale__c</fullName>
        <description>Indicates End of Life of a given product for Sales purposes</description>
        <inlineHelpText>Indicates End of Life of a given product for Sales purposes</inlineHelpText>
        <label>End of Life for Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Life_for_Support__c</fullName>
        <description>Indicates End of Life of a given product for customer service purposes</description>
        <label>End of Life for Support</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Installed_or_Provisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Installed or Provisioned?</description>
        <inlineHelpText>Whether a given Product is to be Installed / Provisioned or not</inlineHelpText>
        <label>Is Installed or Provisioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quantity_Applicable__c</fullName>
        <formula>TEXT(Product_Type__c) = &apos;Service&apos;  &amp;&amp;   (Product_Grouping__r.Name = &apos;Wi-Fi&apos;  || Product_Grouping__r.Name = &apos;Digital Media&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Quantity Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Status__c</fullName>
        <description>Indicates launched status of a Product</description>
        <label>Launch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Pilot</fullName>
                </value>
                <value>
                    <fullName>Field Pilot</fullName>
                </value>
                <value>
                    <fullName>Feature Restricted</fullName>
                </value>
                <value>
                    <fullName>Volume Restricted</fullName>
                </value>
                <value>
                    <fullName>Customer Specific</fullName>
                </value>
                <value>
                    <fullName>Unrestricted</fullName>
                    <default>true</default>
                    <label>Unrestricted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NEP_Product__c</fullName>
        <defaultValue>true</defaultValue>
        <description>NEP Product</description>
        <inlineHelpText>NEP Product</inlineHelpText>
        <label>NEP Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Device_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Needs Device ID?</description>
        <inlineHelpText>Whether to generate a Device ID or not using Device ID generator</inlineHelpText>
        <label>Needs Device ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Site_Type__c</fullName>
        <description>New Site Types</description>
        <inlineHelpText>New Site Types</inlineHelpText>
        <label>New Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broadband Remote</fullName>
                </value>
                <value>
                    <fullName>Spaceway</fullName>
                </value>
                <value>
                    <fullName>Jupiter</fullName>
                </value>
                <value>
                    <fullName>Waiting on BG to Provide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Bonding</fullName>
                </value>
                <value>
                    <fullName>Broadband Remote</fullName>
                </value>
                <value>
                    <fullName>BYOB</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Dedicated ADSL L2</fullName>
                </value>
                <value>
                    <fullName>Dedicated ADSL L3</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>DSL POTS</fullName>
                </value>
                <value>
                    <fullName>Elearning</fullName>
                </value>
                <value>
                    <fullName>Guest WiFi</fullName>
                </value>
                <value>
                    <fullName>Hx VSAT</fullName>
                </value>
                <value>
                    <fullName>Jupiter</fullName>
                </value>
                <value>
                    <fullName>Standard Wireless</fullName>
                </value>
                <value>
                    <fullName>Shared ADSL L2</fullName>
                </value>
                <value>
                    <fullName>Shared ADSL L3</fullName>
                </value>
                <value>
                    <fullName>Spaceway</fullName>
                </value>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>VADB POTS</fullName>
                </value>
                <value>
                    <fullName>VOIP</fullName>
                </value>
                <value>
                    <fullName>SRVC ASSUR STD EXISTING CUST WITH COMMIT</fullName>
                </value>
                <value>
                    <fullName>SRVC ASSUR STD NEW CUST</fullName>
                </value>
                <value>
                    <fullName>SRVC ASSUR STD EXISTING CUST NO COMMIT</fullName>
                </value>
                <value>
                    <fullName>SRVC ASSUR PLUS NEW CUST</fullName>
                </value>
                <value>
                    <fullName>SRVC ASSUR PLUS EXISTING CUST NO COMMIT</fullName>
                </value>
                <value>
                    <fullName>SRVC ASSUR PLUS EXISTING CUST WITH COMMI</fullName>
                </value>
                <value>
                    <fullName>SRVC ASSUR PLUS NEW CUST BUY UP</fullName>
                </value>
                <value>
                    <fullName>TIME AND MATERIAL</fullName>
                </value>
                <value>
                    <fullName>EXPRESS REPAIR HOME WITH TERM</fullName>
                </value>
                <value>
                    <fullName>EXPRESS REPAIR HOME W/O COMMITMENT WITH TERM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>&quot;Services - Same as Site types
Hardware  - Same as SAP Part Number.

&quot;&quot;Hardware Product&quot;&quot; created from SAP to Installation Portal to Salesforce.

&quot;&quot;Service Products&quot;&quot; created in Salesforce directly.&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>&quot;Services - Same as Site types
Hardware  - Same as SAP Part Number.

&quot;&quot;Hardware Product&quot;&quot; created from SAP to Installation Portal to Salesforce.

&quot;&quot;Service Products&quot;&quot; created in Salesforce directly.&quot;</inlineHelpText>
        <label>Product Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Product Description</description>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Products are classified in to 4 families i.e. Internet Access, Secure WAN, Premium Services and Support.</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet Access Service</fullName>
                </value>
                <value>
                    <fullName>Premium / Value Added Services</fullName>
                </value>
                <value>
                    <fullName>Field Maintenance</fullName>
                </value>
                <value>
                    <fullName>Help Desk Support</fullName>
                </value>
                <value>
                    <fullName>Install Support</fullName>
                </value>
                <value>
                    <fullName>Local Network Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>Secure LAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Grouping_Name__c</fullName>
        <formula>Product_Grouping__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Grouping Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Product Group</description>
        <label>Product Grouping</label>
        <referenceTo>Product_Grouping__c</referenceTo>
        <relationshipLabel>HNS Products</relationshipLabel>
        <relationshipName>HNS_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_SubFamily__c</fullName>
        <description>Products are further classified in to Service, Hardware, Device, Field Maintenance, Help Desk Support or Install Support.</description>
        <label>Product SubFamily</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Products are further classified in to Service, Hardware, Device, Field Maintenance, Help Desk Support or Install Support.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Complex Promotion</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
                <value>
                    <fullName>Additional Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_to_WWTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Flag to Indicate the Product may send to WWTS</description>
        <label>Sent to WWTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_for_Customer_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Visible for Customer Service?</description>
        <inlineHelpText>This flag is used to decide if an asset referencing this Product is to be shown on Customer Service Asset Hierarchy UI</inlineHelpText>
        <label>Visible for Customer Service</label>
        <type>Checkbox</type>
    </fields>
    <label>HNS Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Product_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_Code__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>HT20</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>HNS Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HNS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Device_ID_Suffix_Value_Validation</fullName>
        <active>true</active>
        <description>This Validation used to validate the Value of Device ID NOT to have NA, N/A, and NONE</description>
        <errorConditionFormula>IF( NOT ISNULL( Device_ID_Suffix__c ) &amp;&amp; ( UPPER(Device_ID_Suffix__c) =&apos;NA&apos;  || UPPER(Device_ID_Suffix__c) =&apos;N/A&apos; || UPPER(Device_ID_Suffix__c) =&apos;NONE&apos;), TRUE  , FALSE)</errorConditionFormula>
        <errorMessage>Device ID Suffix Should NOT be N/A or NA or NONE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Code_Not_Editing_Once_Created</fullName>
        <active>true</active>
        <description>This Validation Rule is Used to Stop Editing the Product Code once it is Created</description>
        <errorConditionFormula>ISCHANGED( Product_Code__c )</errorConditionFormula>
        <errorDisplayField>Product_Code__c</errorDisplayField>
        <errorMessage>Product Code Cannot be Edited after it is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Code_and_Product_category_same</fullName>
        <active>false</active>
        <description>Validation rule to ensure that “Product Code” and “Product Category” having same value for Product type = Service or Support</description>
        <errorConditionFormula>IF( TEXT(Product_Type__c) = &apos;Service&apos; || TEXT(Product_Type__c) = &apos;Support&apos;, 
Product_Code__c  &lt;&gt;  TEXT(Product_Category__c), 
Product_Code__c  =  TEXT(Product_Category__c))</errorConditionFormula>
        <errorMessage>Product Code and Product Category should be the same value for Product type = Service or Support</errorMessage>
    </validationRules>
</CustomObject>